games/statisfactory/0.0.12/CHANGELOG.md
# Changelog<br>


<a name="statisfactory-0.0.12"></a>
### [statisfactory-0.0.12](https://github.com/truecharts/apps/compare/statisfactory-0.0.11...statisfactory-0.0.12) (2022-03-03)

#### Chore

* remove fixed env from questions.yaml
* remove some ugly whitespace
* update helm chart common to v9 ([#2011](https://github.com/truecharts/apps/issues/2011))

#### Fix

* BREAKING CHANGE Move some env-vars outside of env section ([#2010](https://github.com/truecharts/apps/issues/2010))



<a name="statisfactory-0.0.10"></a>
### [statisfactory-0.0.10](https://github.com/truecharts/apps/compare/statisfactory-0.0.9...statisfactory-0.0.10) (2022-03-02)

#### Chore

* update helm chart common to v8.17.2 ([#1965](https://github.com/truecharts/apps/issues/1965))



<a name="statisfactory-0.0.9"></a>
### [statisfactory-0.0.9](https://github.com/truecharts/apps/compare/statisfactory-0.0.8...statisfactory-0.0.9) (2022-02-27)

#### Chore

* rename `web_portal` to `open` ([#1957](https://github.com/truecharts/apps/issues/1957))

#### Fix

* Remove portal button and correct runasuser on gui ([#1979](https://github.com/truecharts/apps/issues/1979))



<a name="statisfactory-0.0.8"></a>
### [statisfactory-0.0.8](https://github.com/truecharts/apps/compare/statisfactory-0.0.7...statisfactory-0.0.8) (2022-02-22)

#### Chore

* update helm chart common to v8.16.1 ([#1940](https://github.com/truecharts/apps/issues/1940))



<a name="statisfactory-0.0.7"></a>
### [statisfactory-0.0.7](https://github.com/truecharts/apps/compare/statisfactory-0.0.6...statisfactory-0.0.7) (2022-02-22)

#### Chore

* update helm chart common to v8.16.0 ([#1925](https://github.com/truecharts/apps/issues/1925))



<a name="statisfactory-0.0.6"></a>
### [statisfactory-0.0.6](https://github.com/truecharts/apps/compare/statisfactory-0.0.5...statisfactory-0.0.6) (2022-02-16)

#### Chore

* update helm chart common to v8.15.4 ([#1879](https://github.com/truecharts/apps/issues/1879))



<a name="statisfactory-0.0.5"></a>
### [statisfactory-0.0.5](https://github.com/truecharts/apps/compare/statisfactory-0.0.4...statisfactory-0.0.5) (2022-02-08)

#### Chore

* update helm chart common to v8.15.2 ([#1870](https://github.com/truecharts/apps/issues/1870))



<a name="statisfactory-0.0.4"></a>
### [statisfactory-0.0.4](https://github.com/truecharts/apps/compare/statisfactory-0.0.3...statisfactory-0.0.4) (2022-02-07)

#### Chore

* update helm chart common to v8.15.1 ([#1864](https://github.com/truecharts/apps/issues/1864))



<a name="statisfactory-0.0.3"></a>
### [statisfactory-0.0.3](https://github.com/truecharts/apps/compare/statisfactory-0.0.2...statisfactory-0.0.3) (2022-02-06)

#### Chore

* update helm chart common to v8.15.0 ([#1856](https://github.com/truecharts/apps/issues/1856))



<a name="statisfactory-0.0.1"></a>
### statisfactory-0.0.1 (2022-02-04)

#### Feat

