games/statisfactory/0.0.23/CHANGELOG.md
# Changelog<br>


<a name="statisfactory-0.0.23"></a>
### [statisfactory-0.0.23](https://github.com/truecharts/apps/compare/statisfactory-0.0.22...statisfactory-0.0.23) (2022-04-03)

#### Chore

* Auto-update chart README [skip ci]
* update helm general non-major helm releases ([#2410](https://github.com/truecharts/apps/issues/2410))



<a name="statisfactory-0.0.21"></a>
### [statisfactory-0.0.21](https://github.com/truecharts/apps/compare/statisfactory-0.0.20...statisfactory-0.0.21) (2022-03-31)

#### Chore

* update helm general non-major helm releases ([#2361](https://github.com/truecharts/apps/issues/2361))



<a name="statisfactory-0.0.20"></a>
### [statisfactory-0.0.20](https://github.com/truecharts/apps/compare/statisfactory-0.0.19...statisfactory-0.0.20) (2022-03-30)

#### Chore

* update helm general non-major helm releases ([#2354](https://github.com/truecharts/apps/issues/2354))



<a name="statisfactory-0.0.19"></a>
### [statisfactory-0.0.19](https://github.com/truecharts/apps/compare/statisfactory-0.0.18...statisfactory-0.0.19) (2022-03-26)

#### Chore

* bump all apps to trigger ci



<a name="statisfactory-0.0.16"></a>
### [statisfactory-0.0.16](https://github.com/truecharts/apps/compare/statisfactory-0.0.15...statisfactory-0.0.16) (2022-03-17)

#### Chore

* update helm chart common to v9.1.6 ([#2200](https://github.com/truecharts/apps/issues/2200))



<a name="statisfactory-0.0.15"></a>
### [statisfactory-0.0.15](https://github.com/truecharts/apps/compare/statisfactory-0.0.14...statisfactory-0.0.15) (2022-03-15)

#### Chore

* update helm chart common to v9.1.4 ([#2181](https://github.com/truecharts/apps/issues/2181))



<a name="statisfactory-0.0.14"></a>
### [statisfactory-0.0.14](https://github.com/truecharts/apps/compare/statisfactory-0.0.13...statisfactory-0.0.14) (2022-03-15)

#### Chore

* update helm chart common to v9.1.3 ([#2174](https://github.com/truecharts/apps/issues/2174))

#### Docs

* add alexthamm as a contributor for bug ([#2082](https://github.com/truecharts/apps/issues/2082))



<a name="statisfactory-0.0.13"></a>
### [statisfactory-0.0.13](https://github.com/truecharts/apps/compare/statisfactory-0.0.12...statisfactory-0.0.13) (2022-03-07)

#### Chore

* update helm chart common to v9.1.2 ([#2049](https://github.com/truecharts/apps/issues/2049))
* Remove `-icon` string from icon png's ([#2040](https://github.com/truecharts/apps/issues/2040))



<a name="statisfactory-0.0.12"></a>
### [statisfactory-0.0.12](https://github.com/truecharts/apps/compare/statisfactory-0.0.11...statisfactory-0.0.12) (2022-03-03)

#### Chore

* remove fixed env from questions.yaml
* remove some ugly whitespace
* update helm chart common to v9 ([#2011](https://github.com/truecharts/apps/issues/2011))

#### Fix

* BREAKING CHANGE Move some env-vars outside of env section ([#2010](https://github.com/truecharts/apps/issues/2010))



<a name="statisfactory-0.0.10"></a>
### [statisfactory-0.0.10](https://github.com/truecharts/apps/compare/statisfactory-0.0.9...statisfactory-0.0.10) (2022-03-02)

